# smartplaylist

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  docker-compose.yml  opencode.jsonc  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.specify/memory/: changelog.md  constitution.md
.specify/templates/: plan-template.md
docker/: entrypoint.sh
docs/: README.md  SUPPORT.md
docs/architecture/: 01_overview.md  02_tech_stack.md
docs/developer/: DEVELOPER-GUIDE.md
docs/user-guide/: MCP_CLIENTS.md  MCP_SERVER_API.md  QUICKSTART.md
src/smartplaylist/: exceptions.py  logging_config.py  main.py  settings.py
src/smartplaylist/beets_wrapper/: exceptions.py  library.py  models.py
src/smartplaylist/cli/: config.yaml.j2  main.py
src/smartplaylist/mcp_server/: main.py  models.py
tests/: test_settings.py
tests/test_beets_wrapper/: test_library.py  test_models.py
tests/test_cli/: test_main.py
tests/test_mcp_server/: test_main.py
